@@ -4,6 +4,8 @@
  * (C) 2000-2001 Tristan Tarrant
  */
 
+#include "config.h"
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -14,12 +16,19 @@
 #include <libgimp/gimp.h>
 #include <libgimp/gimpui.h>
 
+#ifdef HAVE_GIMP_1_2
+#define GIMP20_CONST
+#else
+#define GIMP20_CONST const
+#endif
+
+
 /* Declare some local functions.
  */
 static void   query      (void);
-static void   run        (gchar   *name,
+static void   run        (GIMP20_CONST gchar   *name,
                           gint     nparams,
-                          GimpParam  *param,
+                          GIMP20_CONST GimpParam  *param,
                           gint    *nreturn_vals,
                           GimpParam **return_vals);
 static void   load_palette(gchar *filename);
@@ -29,7 +38,12 @@ static gint32 save_image (gchar  *filename,
 	    gint32  image_ID,
 	    gint32  drawable_ID,
 	    gint32  orig_image_ID);
+#ifdef HAVE_GIMP_1_2
+static GimpRunModeType run_mode;
+#else
 static GimpRunMode run_mode;
+#endif
+
 static guchar   gimp_cmap[768] = {
 0x00, 0x00, 0x00, 0xF8, 0xF0, 0xCC, 0xF4, 0xE4, 0xA4, 0xF0, 0xDC, 0x78, 
 0xEC, 0xD0, 0x50, 0xEC, 0xC8, 0x28, 0xD8, 0xAC, 0x20, 0xC4, 0x94, 0x18, 
@@ -182,9 +196,9 @@ query (void)
 }
 
 static void
-run (gchar   *name,
+run (GIMP20_CONST gchar   *name,
      gint     nparams,
-     GimpParam  *param,
+     GIMP20_CONST GimpParam  *param,
      gint    *nreturn_vals,
      GimpParam **return_vals)
 {
@@ -683,7 +697,11 @@ static gint32 save_image (gchar  *filename,
 #endif
 		orientation = gimp_image_get_guide_orientation(image_ID, guide_ID);
 		switch(orientation) {
+#ifdef HAVE_GIMP_1_2
+		case GIMP_HORIZONTAL:
+#else
 		case GIMP_ORIENTATION_HORIZONTAL:
+#endif
 			if(hoty<0) {
 				hoty = gimp_image_get_guide_position(image_ID, guide_ID);
 #ifdef DEBUG
@@ -691,7 +709,11 @@ static gint32 save_image (gchar  *filename,
 #endif
 			}
 			break;
+#ifdef HAVE_GIMP_1_2
+		case GIMP_VERTICAL:
+#else
 		case GIMP_ORIENTATION_VERTICAL:
+#endif
 			if(hotx<0) {
 				hotx = gimp_image_get_guide_position(image_ID, guide_ID);
 #ifdef DEBUG
