@@ -1,3 +1,7 @@
+2004-02-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* configure.ac, mapedit/Makefile.am, mapedit/u7shp.c:
+	  made gimp plugin compile in both gimp 1.2.x and gimp 1.3/2.0(pre)
+
 2004-02-25  Ryan Nunn  <colourles@users.sourceforge.net>
 	* msvcstuff/*.* : Replacing MSVC 6.0 projects with MSVC.Net projects
 	* other files: Removing some MSVC hacks
